[gd_scene load_steps=14 format=3 uid="uid://cp2v40a177gyl"]

[ext_resource type="Script" path="res://src/states/game.gd" id="1_yscrs"]
[ext_resource type="Texture2D" uid="uid://dnkmcrctys5f3" path="res://assets/textures/reticle.png" id="2"]
[ext_resource type="PackedScene" uid="uid://j484fwghh2lq" path="res://src/states/menus/pause_menu.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cfry4i6rhmqfe" path="res://src/states/scoreboard/scoreboard.tscn" id="4_p8pj3"]
[ext_resource type="FontFile" uid="uid://djfm1so74p08k" path="res://assets/fonts/DejaVuMarkup-BoldOblique.ttf" id="5_geeuk"]
[ext_resource type="FontVariation" uid="uid://bbq4hy4ot1oxr" path="res://resources/fonts/italic_large.tres" id="5_u86q7"]
[ext_resource type="PackedScene" uid="uid://cyi7e47h73dnk" path="res://src/objects/power_indicator.tscn" id="5_vgutr"]

[sub_resource type="LabelSettings" id="LabelSettings_hli4g"]
font = ExtResource("5_geeuk")
font_size = 36
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_000cq"]
font = ExtResource("5_u86q7")
font_size = 48
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_itmfm"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%SpawnCountdown:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%SpawnCountdown:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Go!"]
}

[sub_resource type="Animation" id="Animation_eq3tp"]
resource_name = "countdown"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%SpawnCountdown:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%SpawnCountdown:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["3", "2", "1"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_countdown"
}]
}

[sub_resource type="Animation" id="Animation_1ac2g"]
resource_name = "go"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%SpawnCountdown:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%SpawnCountdown:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Go!"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_55orh"]
_data = {
"RESET": SubResource("Animation_itmfm"),
"countdown": SubResource("Animation_eq3tp"),
"go": SubResource("Animation_1ac2g")
}

[node name="Game" type="Node"]
script = ExtResource("1_yscrs")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Reticle" type="TextureRect" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 112.0
offset_bottom = 112.0
scale = Vector2(0.25, 0.25)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("2")
stretch_mode = 4

[node name="Scoreboard" parent="UI" instance=ExtResource("4_p8pj3")]
unique_name_in_owner = true

[node name="PauseMenu" parent="UI" instance=ExtResource("3")]
unique_name_in_owner = true
visible = false

[node name="MatchTimer" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_top = 16.0
offset_bottom = 32.0
text = "2:00.0"
label_settings = SubResource("LabelSettings_hli4g")
horizontal_alignment = 1

[node name="SpawnCountdown" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.36
anchor_right = 0.5
anchor_bottom = 0.36
offset_left = -37.0
offset_top = -31.5
offset_right = 37.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
text = "Go!"
label_settings = SubResource("LabelSettings_000cq")
horizontal_alignment = 1

[node name="PowerIndicator" parent="UI" instance=ExtResource("5_vgutr")]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="QuiverDisplay" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 11.0
offset_top = 19.0
offset_right = 51.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_55orh")
}
autoplay = "RESET"

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://src/objects/player.tscn")
spawn_path = NodePath("../Players")

[node name="Players" type="Node" parent="."]

[node name="Arrows" type="Node" parent="."]
unique_name_in_owner = true

[node name="ArrowPickups" type="Node" parent="."]

[connection signal="spawned" from="PlayerSpawner" to="." method="on_player_spawned"]
